# uneval

./: Cargo.toml  LICENSE  README.md  build.rs
src/: convert.rs  error.rs  funcs.rs  helpers.rs  lib.rs  ser.rs
test_fixtures/: .gitignore  data.toml  source.data
tests/: definition.tpl  generate_and_use.rs  main.snapshot.tpl  main.tpl  user.snapshot.tpl  user.tpl
