[package]
name = "uneval"
version = "0.2.0"
authors = ["k.bagrov <k.bagrov@g.nsu.ru>"]
edition = "2018"
description = "Serde serializer to embed data as Rust code"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Cerberuser/uneval"
categories = ["development-tools::build-utils"]

[dependencies]
serde = "1.0"
thiserror = "1.0"

[dev_dependencies]
batch_run = "1.2"
toml = "0.5"